--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
             <h2>About Me</h2>
             <h4>Hello! <span> I'm Leen Sulami </span></h4>
             <p>
-              I’m a student of FCIT at KAU, constantly seeking to develop my
-              skills and gain new ones, I’m highly organized and hard-working
-              individual looking for a responsible position to gain practical
-              experience.
+            Information Technology Student ...... 
             </p>
             <div>
               <ul class="list-inline">
@@ -210,7 +207,7 @@
       <section style="height: 80px;"></section>
 
 
-<h3> by leen saleh</h3>
+
     <script src="./Lib/jquery-3.6.0.min.js"></script>
     <script src="./Lib/js/bootstrap.min.js"></script>
     <script src="./Js/app.js"></script>
