--- a/Contactme.html
+++ b/Contactme.html
@@ -73,14 +73,24 @@
           <div class="col text-center">
             <div class="content-box">
               <h1>
-                hey
-                <span class="contact"> </span>
+                Welcom Again
+                <div class="contact"></div>
               </h1>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <section class="contactme">
+      <div class="row">
+        <div class="col-50">
+          <div><h2 class="contactme-h2">Do You Have Any Questions ?</h2></div>
+        </div>
+      </div>
+
+      >
+    </section>
     <section style="height: 80px"></section>
     <script src="./Lib/jquery-3.6.0.min.js"></script>
     <script src="./Lib/js/bootstrap.min.js"></script>
@@ -90,7 +100,7 @@
   </body>
   <script>
     var typed1 = new Typed(".contact", {
-      strings: ["..", "Get In Touch !"],
+      strings: ["..", "Contact Me !"],
       smartBackspace: true,
       typeSpeed: 150,
       backSpeed: 150,
