--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Lib/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./Css/style.css" />
+    <link rel="stylesheet" href="./Css/humburger.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Nunito:wght@606&display=swap"
@@ -37,12 +38,12 @@
           class="navbar-toggler"
           type="button"
           data-toggler="collaps"
-          data-targer="#navbarId"
+          data-target="#navbarId"
         >
-          <span> <i class="fas fa-bars hamburger"></i></span>
+          <span> <i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarId">
-          <ul class="navbar-nav ms-md-auto">
+          <ul class="navbar-nav ms-md-auto sidenav ">
             <li class="nav-item">
               <a href="/index.html" class="nav-link">Home</a>
             </li>
@@ -52,12 +53,7 @@
             <li class="nav-item">
               <a href="" class="nav-link">Services</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Client</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Protfolio</a>
-            </li>
+
             <li class="nav-item">
               <a href="./Contactme.html" class="nav-link">Contact</a>
             </li>
@@ -78,7 +74,7 @@
                 I'M
                 <span class="element"> </span>
               </h1>
-              <a href="#" class="btn"> Download CV </a>
+              <a href="./under.html" class="btn"> Download CV </a>
             </div>
           </div>
         </div>
@@ -94,7 +90,7 @@
             <h2>About Me</h2>
             <h4>Hello! <span> I'm Leen Sulami </span></h4>
             <p>
-            Information Technology Student ...... 
+              Information Technology student, interested in web development (front-end & back-end) | programmer - Reader | I’m still learning 
             </p>
             <div>
               <ul class="list-inline">
@@ -104,7 +100,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/leen-s-al-sulami-a73118193">
                     <i class="fa-brands fa-linkedin"></i>
                   </a>
                 </li>
@@ -114,7 +110,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://github.com/LeenAlsulami">
                     <i class="fa-brands fa-github-square"></i>
                   </a>
                 </li>
