--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               <a href="/index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">About</a>
+              <a href="./under.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Services</a>
+              <a href="./under.html" class="nav-link">Services</a>
             </li>
 
             <li class="nav-item">
